@@ -1,8 +1,6 @@
 copy "DW_country_mappings.txt" "DWToV2\country_mappings.txt"
 copy "readme.txt" "DWToV2\readme.txt"
 copy "DW_province_mappings.txt" "DWToV2\province_mappings.txt"
-copy "input.v2" "DWToV2\input.v2"
-copy "ins.txt" "DWToV2\ins.txt"
 copy "convert.bat" "DWToV2\convert.bat"
 copy "cultureMap.txt" "DWToV2\cultureMap.txt"
 copy "religionMap.txt" "DWToV2\religionMap.txt"
